; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_intel.c_azx_single_get_response.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_intel.c_azx_single_get_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_bus = type { %struct.azx* }
%struct.azx = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hda_bus*, i32)* @azx_single_get_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @azx_single_get_response(%struct.hda_bus* %0, i32 %1) #0 {
  %3 = alloca %struct.hda_bus*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.azx*, align 8
  store %struct.hda_bus* %0, %struct.hda_bus** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.hda_bus*, %struct.hda_bus** %3, align 8
  %7 = getelementptr inbounds %struct.hda_bus, %struct.hda_bus* %6, i32 0, i32 0
  %8 = load %struct.azx*, %struct.azx** %7, align 8
  store %struct.azx* %8, %struct.azx** %5, align 8
  %9 = load %struct.azx*, %struct.azx** %5, align 8
  %10 = getelementptr inbounds %struct.azx, %struct.azx* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* %15, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
